最初の問題を充実させた

--- a/README.adoc
+++ b/README.adoc
@@ -64,18 +64,40 @@
 ****
 
 
-== コンパイラ・インタプリタの構成や用語の基礎知識の確認（DP3.3）
+== コンパイラ・インタプリタの構成や用語の基礎知識の確認（DP3.4）
 
-=== 次の各項目について該当する用語を選びなさい
+=== 用語と解説の対応づけ
 
-. 文字（charactor）の並びから、トークン（token）の並びに変換する。
-. トークンの並びから、式（expression）や文（statement）を構成する。
-. 構文木は、
-. あるプログラミング言語のソースコードを他のプログラミング言語のソースコードに変換する。
+【問1】このファイル（README.adoc）自体を編集して、下記の用語説明の後の `[用語]` 欄をふさわしい用語に修正しなさい。 +
+回答は用語群から選びなさい。
+
+IMPORTANT: 編集後にプレビューして、期待通り編集できているか確認すること。
+
+* あるプログラミング言語のソースコードを他のプログラミング言語のソースコードに変換する。[用語]
+* 関数の引数や演算の引数が妥当な型なのかチェックする。[用語]
+* 終端記号・非終端記号・出発記号・生成規則によってプログラミング言語の構造を表す。[用語]
+* ソースコードを別の形式のコードに変換するが実行しない。[用語]
+* ソースコードを逐次変換しながら実行する。[用語]
+* トークンの並から式や文を構成する。[用語]
+* トークンの並びを式や文に構成する際に作成する。[用語]
+* プログラム中で利用している変数が定義されているかチェックする。[用語]
+* 文字の並びからトークンの並びに変換する。[用語]
 
 
-字句解析と構文解析と意味解析の違いを問う
+.用語群
+意味解析、インタプリタ、構文木、コンパイラ、構文解析、字句解析、トランスパイラ、BNF、文脈自由文法
 
+.回答の編集例（README.adocの書式で記載）
+[source asciidoctor]
+----
+* この講義の演習で開発対象としたプログラミング言語。[Lox] // <1>
+
+.用語群
+Java、Lox
+----
+<1>  `[用語]` を `[Lox]` に修正した。
+
+=== 用語と解説の対応づけ
 
 == 作成したLoxインタプリタの動作を確認する（DP3.3）
 
