試験問題を作成した

--- a/README.adoc
+++ b/README.adoc
@@ -43,6 +43,7 @@
 画面のスナップ（ハードコピー）が必要な設問がある。スナップの取得方法については、ミニテスト（6）で実施した方法を参考にすること。
 --
 
+////
 .試験のアナウンス内容
 ****
 * 準備
@@ -63,7 +64,7 @@
 *** 更新したインタプリタを動かす
 ****
 
-
+////
 == コンパイラ・インタプリタの構成や用語の基礎知識の確認（DP3.4）
 
 === 用語と解説の対応づけ
@@ -81,6 +82,7 @@ IMPORTANT: 編集後にプレビューして、期待通り編集できている
 * トークンの並から式や文を構成する。[用語]
 * トークンの並びを式や文に構成する際に作成する。[用語]
 * プログラム中で利用している変数が定義されているかチェックする。[用語]
+* 文脈自由文法の生成規則を簡便な記法によって表現する。[用語]
 * 文字の並びからトークンの並びに変換する。[用語]
 
 
@@ -97,22 +99,75 @@ Java、Lox
 ----
 <1>  `[用語]` を `[Lox]` に修正した。
 
-=== 用語と解説の対応づけ
+IMPORTANT: 問1の回答に手を付けたなら、一度commitしておきなさい（後でやったり、修正した場合も同様）。
+
+=== 正規表現の理解
+
+NOTE: Rubular（`https://rubular.com/`）などを使ってもよい。
+
+【問2】カンマ区切りのCSVファイルの各行から、西暦の年月日を取り出す正規表現を作りなさい。
+
+.作成した正規表現
+----
+ここに作成した正規表現を書く。
+----
+
+.読み取りたい年月日のデータ（ファイルは `codes/personal_infomation.csv`）
+[source,text]
+----
+include::{sourcesdir}/personal_infomation.csv[]
+----
+
+IMPORTANT: 問2の回答に手を付けたなら、一度commitしておきなさい（後でやったり、修正した場合も同様）。
+
+=== BNFの理解
+
+NOTE: ここで使うBNFの記法は、テキストの記法ではなく「コンパイラ07_08」で使った表記（コード例は `codes/breakfast02.bnf`）。
+
+【問3】次のBNFで示される言語（Tinyと呼ぼう）を、後述のプログラム例を処理できる言語にしたい。 +
+要求に応えられるよう、 `codes/tiny_lang.bnf` を編集しなさい。
+
+.プログラム例
+[source,text]
+----
+_x = 30;
+y = 10;
+z_ = _x - y * 2;
+w = (z_ + 5) / 3;
+----
+
+.プログラミング言語TinyのBNF（ファイルは `codes/tiny_lang.bnf` ）
+[source,text]
+----
+include::{sourcesdir}/tiny_lang.bnf[]
+----
+
+IMPORTANT: 問3の回答に手を付けたなら、一度commitしておきなさい（後でやったり、修正した場合も同様）。
+
 
 == 作成したLoxインタプリタの動作を確認する（DP3.3）
 
 === 演習で作成したlox01の最終版をpushする
+
+【準備A】演習で作成したlox01の最終版をpushしなさい。すでに最新をpush済みなら、この準備はとばしてよい。
 
 [IMPORTANT]
 --
 自分が演習で使用していたlox01のAssignment（自分がacceptして作業していたAssignment）を使う。
 もし、最終版がローカル（PC側）にあってpushしていないなら、pushしておく。
 
-現在演習している版が動作していないようなら、動作している段階でコミットしている版を使うこと。
+現在演習している版が動作していないようなら、動作している段階でcommitしている版を使うこと。
 --
 
+****
+このあと、リモートのリポジトリをローカルへcloneするところまでの手順を実施して、そのターミナルウィンドウのスナップショットを取得する（スナップの取得方法はミニテスト（6）を参照）。
+
+ターミナルのログを作業方法を理解できてるかを判定する材料とするので、そのつもりで作業すること。
+****
 
 === 作業ディレクトリを作成する（Windows）
+
+【準備B】作業用ディレクトリを作成しなさい。
 
 [source,shell]
 ----
@@ -126,9 +181,11 @@ cd compiler-exam-01 # <4>
 <3> `compiler-exam-01` という名前のディレクトリを作る。
 <4> 作成したディレクトリへ移動する。
 
-<<clone01>> へ進む。
+ターミナルはそのままにして、 <<clone01>> へ進む。
 
 === 作業ディレクトリを作成する（Mac or MSYS2）
+
+【準備B】作業用ディレクトリを作成しなさい。
 
 [source,shell]
 ----
@@ -140,10 +197,14 @@ cd compiler-exam-01 # <3>
 <2> `compiler-exam-01` という名前のディレクトリを作る。
 <3> 作成したディレクトリへ移動する。
 
-<<clone01>> へ進む。
+ターミナルはそのままにして、 <<clone01>> へ進む。
 
 [[clone01]]
 === lox01をcloneする
+
+【準備C】作成した作用用ディレクトリへ、lox01のAssignmentのリポジトリからcloneしなさい。
+
+WARNING: リモートからローカルへcloneしないでローカル内の既存のlox01をコピーして済ませないこと。
 
 [source,shell]
 ----
@@ -159,61 +220,87 @@ MacやMSYS2のターミナルでは `/Users/{ログイン名}/compiler-exam-01` 
 lox01のAssignmentを受理したときにcloneしたのと同様にして、リモートからローカルへAssignmentのリポジトリをcloneする。
 <4> cloneしたローカルリポジトリへ移動する。
 
-<<clone01>> へ進む。
+
+=== ここまでの作業の様子を保存する
+
+【問4】ミニテスト（6）で実施したような方法を使って、ターミナル（やコマンドプロンプト）のウィンドウのスナップを取得して、下記ファイル（ `images/cloning_lox01.jpg` ）を置き換えなさい。
+
+NOTE: この文書に差し込んでいる下記ダミーファイルはJPEGファイルになっている。もしPNGを取得したなら、下記で指定しているファイル名の拡張子を変更しなさい。
+
+.作業ディレクトリの作成からlox01をcloneするまでの作業の様子のターミナルウィンドウのスナップ
+--
+image::cloning_lox01.jpg[]
+--
+
+IMPORTANT: 問4の回答に手を付けたなら、一度commitしておきなさい（後でやったり、修正した場合も同様）。
 
 === lox01の動作を確認する
 
-. 現在のディレクトリが上記で作成した場所であることを確認する。
-. 講義中に演習で自分が使っていたlox01のAssignmentc01cloneした様子（ターミナル等の画面のハードコピーを撮る）。
-. 別途cloneしたlox01を動かす（指定したプログラムを走らせる）
+【問5】作業用ディレクトリにcloneしたlox01に含まれているLoxインタプリタを動かして、動作を示しなさい。
 
-[source,java]
+Loxインタプリタの起動から、指定したプログラムを実行しているまでの様子を表示しているターミナルウィンドウのスナップを `images/sample_lox_snap.jpg` （PNGでもよい）に保存し、下記にスナップが表示されるようにしなさい。
+
+* 1,2限の受講生は、`codes/sample01.lox` を lox01の `codes` ディレクトリへコピーして、実行してみなさい。
+* 3,4限の受講生は `codes/sample02.lox` を lox01の `codes` ディレクトリへコピーして、実行してみなさい。
+
+.`sample01.lox` または `sample02.lox` を動作させた様子のスナップ
+--
+image::sample_lox_snap.jpg[]
+--
+
+IMPORTANT: 問5の回答に手を付けたなら、一度commitしておきなさい（後でやったり、修正した場合も同様）。 +
+気になるなら、pushしておくのもよいだろう。
+
+== Loxインタプリタの動作を変更する（DP3.4）
+
+【準備A】lox01の `codes/com/craftinginterpreters/lox` ディレクトリを内容ごとコピーして、 `codes/com/craftinginterpreters/lox_s` を作りなさい（ `lox` ディレクトリを内容ごとコピーして、 `lox_s` ディレクトリを作る）。
+
+【準備B】 `lox_s` がGitHubに認識されるよう、`git add` コマンドで追加しておきなさい。
+
+IMPORTANT: `add` を忘れると、push したときに反映されないため、採点対象にならないので注意すること。
+
+【問6】Loxの文字列は「"」で囲まれた文字の並びであるが、文字列の中には「"」を含むことができない。
+そこで、文字列内に「\"」のように書かれていた場合には、文字列の終わりとみなさず、文字列に含むことができるように修正しなさい。
+
+.プログラム例
+[source,text]
 ----
-print 45 + 23 * 3 / 2;
+print "abcdefg"; // これまでの文字列
+
+print "abc\"defg"; // 今回修正して対応したい文字列の例
 ----
 
-. ASTをASTPrinterで表す
+. `lox_s` 中のコードを修正して動作できるようにしなさい。
+. 修正した`lox_s` 中のLoxインタプリタを動かしなさい。
+. 修正できたら、実行時のスナップを `images/lox_s_snap.jpg` （またはPNG）と差し替えなさい。
 
-[source,java]
-----
-print (45 + 23) * 3 / 2;
-----
+NOTE: 修正や動作確認の途中でも、必要ならcommitしておきなさい。
 
-ASTをASTPrinterで表す。
+.`lox_s` を実行したときのスナップ
+--
+image::lox_s_snap.jpg[]
+--
 
-== Loxインタプリタの動作を変更する（DP3.3）
-
-別のAssignmentを用意する（lox01にほぼ同じ）。
-
-受理してcloneさせる。
-
-指定の修正を施す。
-
-文字列の中に文字列区切りがあっても良くする。
-
-print "abcdefg";
-
-print "abc\"defg";
-
-BNFを修正する。
-
-プログラムを修正する。
-
-修正したlox01を動かす
-
-問題点があれば、修正を繰り返す。
-
-lox01をコミットしてプッシュする。
-
-動かした結果を保存する。
+IMPORTANT: 問6の回答に手を付けたなら、commitしておきなさい（後でやったり、修正した場合も同様）。 +
+気になるなら、pushしておくのもよいだろう。
 
 
 == プログラムのエラーの修正（DP3.4）
 
-別のAssignmentを用意する（lox01にほぼ同じ）。
+【問7】次のAssignmentのプログラムコードにはエラーがあり、コンパイルが完了しない。
+インタプリタが動作するように、エラーを修正し、動作を確認しなさい。
 
-受理してcloneさせる。
+. 1,2限の受講生は、Assignment `https://classroom.github.com/a/6B5PCWyg` を受理してcloneする。
+. 3.4限の受講生は、Assignment `https://classroom.github.com/a/aEb3v1uz` を受理してcloneする。
+. 受理したAssignmentのプログラムコードにエラーがあり、コンパイルが完了しないことを確認する。
+. インタプリタが動作するようにプログラムを修正する。
+. 動作を確認する。
+. 必要なcommitやpushを実施する。
 
-受理したプログラムにはエラーがあることを確認させる（javacを実行）。
+IMPORTANT: 問6の回答に手を付けたなら、commitしておきなさい（後でやったり、修正した場合も同様）。 +
+気になるなら、pushしておくのもよいだろう。
 
-問題点を修正して、実行できるようにする。
+
+== 試験の提出
+
+このAssignment、`lox_e` のAssignmentを、commit して push することで、試験を提出したとみなす。
