--- a/README.adoc
+++ b/README.adoc
@@ -81,7 +81,7 @@ IMPORTANT: 編集後にプレビューして、期待通り編集できている
 * 文脈自由文法の生成規則を簡便な記法によって表現する。[用語]]
 * プログラム中で利用している変数が定義されているかチェックする。[用語]
 * トークンの並びを式や文に構成する際に作成する。[用語]
-* トークンの並から式や文を構成する。[用語]
+* トークンの並びから式や文を構成する。[用語]
 * ソースコードを逐次変換しながら実行する。[用語]
 * ソースコードを別の形式のコードに変換するが実行しない。[用語]
 * 終端記号・非終端記号・出発記号・生成規則によってプログラミング言語の構造を表す。[用語]
