問4の言い回しを修正

--- a/README.adoc
+++ b/README.adoc
@@ -272,7 +272,7 @@ $ cd lox01-kuboaki-nichidai-1 # <3>
 
 === ここまでの作業の様子を保存する
 
-【問4】cloneできた様子を取得した画像ファイルで、下記ファイル（ `images/cloning_lox01.jpg` ）を置き換えなさい。
+【問4】cloneできた様子を画像ファイルとして取得し、下記ファイル（ `images/cloning_lox01.jpg` ）を置き換えなさい。
 
 NOTE: この文書に差し込んでいる下記ダミーファイルはJPEGファイルになっている。もしPNGファイルに取得したなら、下記で指定しているファイル名の拡張子を変更しなさい。
 
